src/test/ui/asm/issue-69092.stderr
error: <inline asm>:1:9: error: expected string in '.ascii' directive
        .ascii "Xen
               ^

  --> $DIR/issue-69092.rs:8:14
   |
LL |     unsafe { llvm_asm!(".ascii \"Xen\0\""); }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

